[package]
name = "layer-rs"
version = "0.1.1"
edition = "2024"
authors = ["Daisuke Matsunami (Comavius) <comavius@proton.me>"]
description = "Effect-TS like type level DI container in Rust, with O(log n) get and insert"
publish = true
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/comavius/layer-rs"
